--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Bcsrl
+    %title Group6_Practice_Project
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     %meta{'charset' => 'utf-8'}
     %meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
@@ -13,4 +13,7 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    
+    =render('shared/header')
     = yield
+    
