--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,8 +1,7 @@
 %nav.nav.justify-content-center
-  %a.nav-link.active{"aria-current" => "page", :href => "#"} Active
-  %a.nav-link{:href => "#"} Ionut
+  %a.nav-link.active{"aria-current" => "page", :href => "/"} Home
+  %a.nav-link{:href => "/ionut"} Ionut
   %a.nav-link{:href => "#"} Murphy
   %a.nav-link{:href => "#"} Taimoor
   %a.nav-link{:href => "#"} Max
   %a.nav-link{:href => "#"} Unknown
-  %a.nav-link.disabled Disabled
