--- a/app/views/home/taimoor.html.haml
+++ b/app/views/home/taimoor.html.haml
@@ -25,8 +25,7 @@
           %h5.mt-2.mb-0 Taimoor Rizwan
           %span SEP Group Member
           .px-4.mt-1 
-            %p.fonts Taimoor Rizwan draws from his life story when writing about the experiences of migrant workers. His first series of poems, My Father's Hands, appeared in The New Yorker and describes how his family crossed the Texas border to give Manuel and his brothers a better life. After receiving his Master's in Fine Arts from Columbia University, Manuel wrote three nonfiction novels about his experiences, including Under the Streaming Sun, which earned the National Prize for Arts and Sciences in 2008. Manuel is currently working on a collection of fictional short stories to be published in early 2021.
-            
+            %p.fonts Taimoor Rizwan draws from his life story when writing about the experiences of migrant workers. His first series of poems, My Father's Hands, appeared in The New Yorker and describes how his family crossed the Texas border to give Manuel and his brothers a better life.
           .buttons
             %button.btn.btn-outline-primary.px-4{:onclick => "getLocation()"} Current Location
 
