Added map button

--- a/app/views/home/taimoor.html.haml
+++ b/app/views/home/taimoor.html.haml
@@ -28,5 +28,7 @@
             %p.fonts Taimoor Rizwan draws from his life story when writing about the experiences of migrant workers. His first series of poems, My Father's Hands, appeared in The New Yorker and describes how his family crossed the Texas border to give Manuel and his brothers a better life.
           .buttons
             %button.btn.btn-outline-primary.px-4{:onclick => "getLocation()"} Current Location
+            %button.btn.btn-outline-primary.px-4{:onclick => "/map"} Map
+
 
 
