Map is working on map tab all files in order

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,4 +4,4 @@
   %a.nav-link{:href => "#"} Murphy
   %a.nav-link{:href => "/taimoor"} Taimoor
   %a.nav-link{:href => "#"} Max
-  %a.nav-link{:href => "#"} Unknown
+  %a.nav-link{:href => "/map"} Maps
