--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,5 +3,6 @@
   %a.nav-link{:href => "/ionut"} Ionut
   %a.nav-link{:href => "#"} Murphy
   %a.nav-link{:href => "/taimoor"} Taimoor
+  %a.nav-link{:href => "/Kez"} Kez
   %a.nav-link{:href => "#"} Max
   %a.nav-link{:href => "/map"} Maps
