home page editied

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,3 +1,5 @@
 %h1 Home#home
 %p Find me in app/views/home/home.html.haml
-%p test branching 
+%p test branching  fsdfkskfsdl54
+%p i am here too
+%p hello therer 
