--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -2,4 +2,5 @@
 %p Find me in app/views/home/home.html.haml
 %p test branching  fsdfkskfsdl54
 %p i am here too
-%p hello therer 
+%p hello therer
+%p vjdsjvskgsdkfskfksfksfk
